# pcwifip2p

./: .gitignore  README.md  STATUS.md
.github/workflows/: build-android.yml  build-windows.yml
android-app/: README.md  build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/hermes/wifip2p/: MainActivity.kt  TcpClient.kt  WifiP2pClient.kt
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml
docs/: DEPLOY.md  PROTOCOL.md
windows-app/: CMakeLists.txt  README.md
windows-app/src/: log.h  main.cpp  tcp_server.cpp  tcp_server.h  wifi_direct_go.cpp  wifi_direct_go.h
